# MPMonitor

./: .env.example  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  users.py
app/domain/events/: users.py
app/domain/exceptions/: base.py  users.py
app/domain/values/: base.py  users.py
app/infra/repositories/users/: base.py  memory.py
app/logic/commands/: base.py
app/logic/events/: base.py
app/logic/exceptions/: base.py
app/tests/domain/entities/: test_users_entities.py
app/tests/domain/values/: test_users_values.py
